# tetris-RL

./: .gitignore  CMakeLists.txt  GEMINI.md  PLAN.md  README.md
docs/: nes_rules_reference.md
engine/: Board.cpp  Board.h  Game.cpp  Game.h  Piece.cpp  Piece.h  Randomizer.cpp  Randomizer.h  Scoring.cpp  Scoring.h  Timing.cpp  Timing.h
render/: main.cpp
tests/: main_test.cpp
